# FBN_LLM

./: .gitignore  README.md  app.py  pyproject.toml
static/: main.css
templates/: describe_image.html  home.html  image_upload.html  layout.html  llm.html  login.html  register.html  run_util.html  test.html  text_prompt.html  text_prompt_form.html
utils/: auth_utils.py  llm_prompt.py  llm_utils.py
