[project]
name = "fbn-llm"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "anyio>=4.9.0,<5.0.0",
    "bcrypt>=4.3.0,<5.0.0",
    "blinker>=1.9.0,<2.0.0",
    "certifi>=2025.7.14,<2026.0.0",
    "click>=8.2.1,<9.0.0",
    "flask>=3.1.1,<4.0.0",
    "flask-login>=0.6.3,<1.0.0",
    "flask-sqlalchemy>=3.1.1,<4.0.0",
    "flask-wtf>=1.2.2,<2.0.0",
    "h11>=0.16.0,<1.0.0",
    "httpcore>=1.0.9,<2.0.0",
    "httpx>=0.28.1,<1.0.0",
    "httpx-ws>=0.7.2,<1.0.0",
    "idna>=3.10,<4.0",
    "itsdangerous>=2.2.0,<3.0.0",
    "jinja2>=3.1.6,<4.0.0",
    "lmstudio>=1.4.1,<2.0.0",
    "markupsafe>=3.0.2,<4.0.0",
    "msgspec>=0.19.0,<1.0.0",
    "sniffio>=1.3.1,<2.0.0",
    "sqlalchemy>=2.0.41,<3.0.0",
    "typing-extensions>=4.14.1,<5.0.0",
    "werkzeug>=3.1.3,<4.0.0",
    "wsproto>=1.2.0,<2.0.0",
    "wtforms>=3.2.1,<4.0.0",
]
